force-app/main/default/objects/Extra_settings_on_position_extended_page__mdt/Extra_settings_on_position_extended_page__mdt.object-meta.xml
<CustomObject>
    <label>Extra settings on position extended page</label>
    <pluralLabel>Extra settings on position extended page</pluralLabel>
</CustomObject>