force-app/main/default/objects/Extra_settings_on_position_extended_page__mdt/fields/Fields_in_FieldSet_for_candidate_card__c.field-meta.xml
<CustomField>
    <fullName>Fields_in_FieldSet_for_candidate_card__c</fullName>
    <description>API name</description>
    <label>Fields in FieldSet for candidate, card</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>