force-app/main/default/objects/Extra_settings_on_position_extended_page__mdt/fields/FieldSet_for_JobApp_popup__c.field-meta.xml
<CustomField>
    <fullName>FieldSet_for_JobApp_popup__c</fullName>
    <description>API name</description>
    <label>FieldSet for JobApp, popup</label>
    <length>40</length>
    <type>Text</type>
</CustomField>