force-app/main/default/objects/Extra_settings_on_position_extended_page__mdt/fields/Setting_for_user_type__c.field-meta.xml
<CustomField>
    <fullName>Setting_for_user_type__c</fullName>
    <label>Setting for user type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interviewer</fullName>
            </value>
            <value>
                <fullName>Recruiter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>